--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <main class="content-wrapper">
       <article class="main-content">
         <h1 class="card-title">Todo List For Today</h1>
+        <label for="description" class="show-msg"></label>
         <form action="" id="form-wrapper">
           <input
             type="text"
