added type submit to the button.

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
           <button type="submit" class="cta-btn"></button>
         </form>
         <ul class="items-list-wrapper"></ul>
-        <button class="clear-lists">Clear</button>
+        <button type="submit" class="clear-lists">Clear</button>
       </article>
     </main>
   </body>
